--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tauri-apps/api": "^1.5.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -50,17 +51,22 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "@tauri-apps/api": "^1.5.3"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.12.0",
+    "@tauri-apps/cli": "^1.5.10",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.4.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@tauri-apps/cli": "^1.5.10"
+    "typescript": "^5"
+  },
+  "overrides": {
+    "eslint": "8.57.0"
   }
 }
