--- a/.github/workflows/tauri-release.yml
+++ b/.github/workflows/tauri-release.yml
@@ -8,21 +8,13 @@ on:
 jobs:
   build:
     strategy:
-      matrix:
-        os: [macos-latest, windows-latest, ubuntu-latest]
+      matrix: { os: [macos-latest, windows-latest, ubuntu-latest] }
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
-
+      - uses: dtolnay/rust-toolchain@stable
       - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'   # change to 'pnpm' or 'yarn' if you use those
-
-      - name: Install deps
-        run: |
-          npm ci
-          npm i -D @tauri-apps/cli
+        with: { node-version: '20' }
 
       - name: Linux system deps
         if: runner.os == 'Linux'
@@ -30,14 +22,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libayatana-appindicator3-dev librsvg2-dev
 
-      - uses: dtolnay/rust-toolchain@stable
-
-      - name: Build with Tauri
-        uses: tauri-apps/tauri-action@v0
-        with:
-          args: build
+      - run: npm ci
+      - run: npx tauri build   # requires @tauri-apps/cli in devDependencies
 
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ runner.os }}-artifacts
           path: src-tauri/target/release/bundle/**/*
+
