--- a/.github/workflows/tauri-release.yml
+++ b/.github/workflows/tauri-release.yml
@@ -3,7 +3,7 @@ name: Tauri Windows build
 on:
   workflow_dispatch: {}
   push:
-    tags: ["v*.*.*"]   # run when you push a tag like v0.1.0
+    tags: ["v*.*.*"]
 
 jobs:
   build-windows:
@@ -31,10 +31,17 @@ jobs:
       - name: Build Tauri (NSIS)
         run: npm run tauri build -- --bundles nsis
 
+      # NEW: show what got produced so we can confirm paths in the logs
+      - name: List build outputs
+        shell: pwsh
+        run: |
+          Write-Host "=== TREE: src-tauri\\target ==="
+          Get-ChildItem -Path src-tauri\target -Recurse -File | Select-Object FullName
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: tauri-windows
           path: |
-            src-tauri/target/release/bundle/nsis/*.exe
-            src-tauri/target/release/tauri_labels.exe
+            src-tauri/target/**/bundle/nsis/*.exe
+            src-tauri/target/**/release/*.exe
